fix all checkstyle